EXTRA_DIST = \
    gjobs.xml \
    meson.build \
    test1.xml \
    test2.xml \
    test3.xml

check_PROGRAMS = \
    gjobread \
    io1 \
    io2 \
    parse1 \
    parse2 \
    parse3 \
    parse4 \
    reader1 \
    reader2 \
    reader3 \
    reader4 \
    testWriter \
    tree1 \
    tree2 \
    xpath1 \
    xpath2

AM_CPPFLAGS = -I$(top_builddir)/include -I$(top_srcdir)/include
LDADD = $(top_builddir)/libxml2.la

gjobread_SOURCES=gjobread.c
io1_SOURCES = io1.c
io2_SOURCES = io2.c
parse1_SOURCES = parse1.c
parse2_SOURCES = parse2.c
parse3_SOURCES = parse3.c
parse4_SOURCES = parse4.c
reader1_SOURCES = reader1.c
reader2_SOURCES = reader2.c
reader3_SOURCES = reader3.c
reader4_SOURCES = reader4.c
testWriter_SOURCES = testWriter.c
tree1_SOURCES = tree1.c
tree2_SOURCES = tree2.c
xpath1_SOURCES = xpath1.c
xpath2_SOURCES = xpath2.c
