
tutorial_files = files(
    'apa.html',
    'apb.html',
    'apc.html',
    'apd.html',
    'ape.html',
    'apf.html',
    'apg.html',
    'aph.html',
    'api.html',
    'ar01s02.html',
    'ar01s03.html',
    'ar01s04.html',
    'ar01s05.html',
    'ar01s06.html',
    'ar01s07.html',
    'ar01s08.html',
    'ar01s09.html',
    'includeaddattribute.c',
    'includeaddkeyword.c',
    'includeconvert.c',
    'includegetattribute.c',
    'includekeyword.c',
    'includexpath.c',
    'index.html',
    'ix01.html',
)

install_data(tutorial_files, install_dir: dir_doc / 'tutorial')

tutorial_image_files = files(
    'images/blank.png',
    'images/caution.png',
    'images/draft.png',
    'images/home.png',
    'images/important.png',
    'images/next.png',
    'images/note.png',
    'images/prev.png',
    'images/tip.png',
    'images/toc-blank.png',
    'images/toc-minus.png',
    'images/toc-plus.png',
    'images/up.png',
    'images/warning.png',
)

install_data(tutorial_image_files, install_dir: dir_doc / 'tutorial' / 'images')

tutorial_image_files = files(
    'images/blank.png',
    'images/caution.png',
    'images/draft.png',
    'images/home.png',
    'images/important.png',
    'images/next.png',
    'images/note.png',
    'images/prev.png',
    'images/tip.png',
    'images/toc-blank.png',
    'images/toc-minus.png',
    'images/toc-plus.png',
    'images/up.png',
    'images/warning.png',
)

install_data(tutorial_image_files, install_dir: dir_doc / 'tutorial' / 'images')
tutorial_image_files = files(
    'images/callouts/1.png',
    'images/callouts/10.png',
    'images/callouts/2.png',
    'images/callouts/3.png',
    'images/callouts/4.png',
    'images/callouts/5.png',
    'images/callouts/6.png',
    'images/callouts/7.png',
    'images/callouts/8.png',
    'images/callouts/9.png',
)

install_data(tutorial_image_files, install_dir: dir_doc / 'tutorial' / 'images' / 'callouts')
