# TODO: Run the tests

python_test_files = files(
    'attribs.py',
    'build.py',
    'compareNodes.py',
    'ctxterror.py',
    'cutnpaste.py',
    'dtdvalid.py',
    'error.py',
    'inbuf.py',
    'indexes.py',
    'input_callback.py',
    'nsdel.py',
    'outbuf.py',
    'push.py',
    'pushSAX.py',
    'pushSAXhtml.py',
    'reader.py',
    'reader2.py',
    'reader3.py',
    'reader4.py',
    'reader5.py',
    'reader6.py',
    'reader7.py',
    'reader8.py',
    'readererr.py',
    'readernext.py',
    'regexp.py',
    'relaxng.py',
    'resolver.py',
    'schema.py',
    'serialize.py',
    'setup_test.py',
    'sync.py',
    'thread2.py',
    'tst.py',
    'tstLastError.py',
    'tstURI.py',
    'tstmem.py',
    'tstxpath.py',
    'validDTD.py',
    'validRNG.py',
    'validSchemas.py',
    'validate.py',
    'walker.py',
    'xpath.py',
    'xpathext.py',
    'xpathleak.py',
    'xpathns.py',
    'xpathret.py',
)

xml_files = files(
    'invalid.xml',
    'test.dtd',
    'tst.xml',
    'valid.xml',
)
